got rid of bugs in periodic table and added content to landing page

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -15,13 +15,25 @@
 <div class="main-content">
   <section>
     <h1 class="mat-title" >Hey! I'm Rithish.</h1><br/><br/>
-    <p [style.font-size]="'1.3em'">
+    <p>
       I'm a high school student from India currently studying my A Levels at APL GLobal School and I would like to share some of my projects on this website.
       I have keen interest in Mathematics, Computer Science and Physics.
     </p>
     <br/>
   </section>
   <br/>
+  <section class="programming-journey">
+    <h2 class="mat-h2">
+      My introduction to Programming
+    </h2>
+    <p>
+      JavaScript was my language that introduced me to the fundamentals of programming. Fast forward to today, I have learnt two more programming languages.
+      One of them is Typescript, which I used to develop this site. The other one is C++, which I use for solving problems in leetcode.
+    </p>
+    <p>
+      I use Typescript extensively to develop websites that include a lot of graphics such as the one you see above. For creating graphics and simulations I make use of the HTML5 canvas element, for low computational simulations, and webgl for 3d graphics that require a lot of quick repetitive operations.
+    </p>
+  </section>
   <br/>
   <section class="skills">
     <h2 class="mat-h2">
