beta version ready

--- a/src/app/projects/main-content/main-content.component.html
+++ b/src/app/projects/main-content/main-content.component.html
@@ -1,1 +1,2 @@
-<p>main-content works!</p>
+<h1 class="mat-title">Under Construction</h1>
+You can still check out my projects by clicking the hamburger menu above.
