--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -2,8 +2,8 @@
   <mat-sidenav autoFocus="false" #sidenav mode="over" autoFocus="false" fixedInViewport="true" [fixedTopGap]="window.innerWidth > 650? 55.927 : 55.927+25">
     <mat-nav-list>
       <mat-list-item role="link" routerLink="periodic-elements/periodic-table" routerLinkActive="active-project">Periodic Table</mat-list-item>
-      <mat-list-item role="link" routerLink="calculator" routerLinkActive="active-project">Calculator</mat-list-item>
-      <mat-list-item role="link" routerLink="prime-numbers" routerLinkActive="active-project">Prime Numbers</mat-list-item>
+      <!-- <mat-list-item role="link" routerLink="calculator" routerLinkActive="active-project">Calculator</mat-list-item> -->
+      <!-- <mat-list-item role="link" routerLink="prime-numbers" routerLinkActive="active-project">Prime Numbers</mat-list-item> -->
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
