removed unwanted attributes from the canvas

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -14,9 +14,9 @@
       }
       a img {
         display: inline;
-        margin-inline: 2em;
-        max-width:2.5em;
-        max-height:2.5em;
+        margin-inline: 2vw;
+        max-width:1.5em;
+        max-height:1.5em;
         width: auto;
         height: auto;
       }
