--- a/src/app/projects/periodic-elements/element-data/element-data.component.html
+++ b/src/app/projects/periodic-elements/element-data/element-data.component.html
@@ -69,7 +69,7 @@
       <mat-list-item disableRipple="" *ngFor="let use of element.uses">{{use}}</mat-list-item>
     </mat-list>
   </section>
-  <!-- <canvas #bohrModel3d></canvas>
+  <canvas #bohrModel3d></canvas>
   <mat-slider min="10" max="195" value="100"  (input)="onSliderChange($event)">
-  </mat-slider> -->
+  </mat-slider>
 </ng-container>
