--- a/src/app/projects/periodic-elements/element-data/element-data.component.html
+++ b/src/app/projects/periodic-elements/element-data/element-data.component.html
@@ -46,7 +46,8 @@
   </section>
   <mat-divider></mat-divider>
   <section class="model-3d position-details" data-name="3D Model">
-    <model-viewer [attr.src]="setElementModelImage()" autoplay camera-controls camera-orbit="-0.67deg 70.99deg auto" exposure="0.4" field-of-view="60deg"></model-viewer>
+    <!-- <model-viewer [attr.src]="setElementModelImage()" autoplay camera-controls camera-orbit="-0.67deg 70.99deg auto" exposure="0.4" field-of-view="60deg"></model-viewer> -->
+    <canvas #bohrModel3d></canvas>
     <mat-list>
       <h1 class="mat-h1">3D Model of {{element.name}}</h1>
       <mat-list-item><span class="LHS">Group:</span>&nbsp;{{element.group}}</mat-list-item>
@@ -55,6 +56,8 @@
       <mat-list-item><span class="LHS">Electron Configuration:</span>&nbsp;{{element.electronConfig}}</mat-list-item>
     </mat-list>
   </section>
+  <span>Zoom: </span><mat-slider min="10" max="195" value="120"  (input)="onSliderChange($event)">
+  </mat-slider>
   <mat-divider></mat-divider>
   <section class="history" data-name="History">
     <h1 class="mat-h1">History of {{element.name}}</h1>
@@ -69,7 +72,5 @@
       <mat-list-item disableRipple="" *ngFor="let use of element.uses">{{use}}</mat-list-item>
     </mat-list>
   </section>
-  <canvas #bohrModel3d></canvas>
-  <mat-slider min="10" max="195" value="100"  (input)="onSliderChange($event)">
-  </mat-slider>
+  <button [style]="{'margin-inline': 'auto', 'display': 'block'}" color="accent" mat-raised-button (click)="goBack()">Back to Periodic Table</button>
 </ng-container>
