--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -14,7 +14,7 @@
 </div>
 <div class="main-content">
   <section>
-    <h1 class="mat-title" >Hey! I'm Rithish.</h1><br/><br/>
+    <h1 class="mat-title" >Hey! I'm Rithish.</h1>
     <p>
       I'm a high school student from India currently studying my A Levels at APL GLobal School and I would like to share some of my projects on this website.
       I have keen interest in Mathematics, Computer Science and Physics.
