bug fixed the huge height effect of 3d bohr model

--- a/src/app/projects/periodic-elements/element-data/element-data.component.html
+++ b/src/app/projects/periodic-elements/element-data/element-data.component.html
@@ -11,8 +11,8 @@
       <mat-list>
         <mat-list-item><span class="LHS">Atomic Mass:</span> &nbsp; {{element.atomicMass + ' amu'}}</mat-list-item>
         <mat-list-item><span class="LHS">Appearance:</span> &nbsp; {{element.appearance}}</mat-list-item>
-        <mat-list-item><span class="LHS">Melting Point:</span> &nbsp; {{element.meltingPoint}}°C</mat-list-item>
-        <mat-list-item><span class="LHS">Boiling Point:</span> &nbsp; {{element.boilingPoint}}°C</mat-list-item>
+        <mat-list-item><span class="LHS">Melting Point:</span> &nbsp; {{element.meltingPoint}}</mat-list-item>
+        <mat-list-item><span class="LHS">Boiling Point:</span> &nbsp; {{element.boilingPoint}}</mat-list-item>
       </mat-list>
     </div>
     <p [innerHTML]="element.description"></p>
