correct grammar in main content of projects

--- a/src/app/projects/main-content/main-content.component.html
+++ b/src/app/projects/main-content/main-content.component.html
@@ -3,7 +3,9 @@
 </p>
 <br/>
 <p>
-  One such example is the <a routerLink="../periodic-elements/periodic-table">Periodic table</a> which was I originally made without the use of a framework. Here is the link original periodic table site: <a href="https://rithish288.github.io/Periodic-Table/" target="_blank">Original Periodic Table</a>.
+  One such example is the <a routerLink="../periodic-elements/periodic-table">Periodic table</a> which I originally made without the use of a framework.
+  <br/>
+  Here is the link original periodic table site: <a href="https://rithish288.github.io/Periodic-Table/" target="_blank">Original Periodic Table</a>.
   The 3d graphics and simulations that are in the Canvas page were built simultaneously with this site.
 </p>
 <br/>
