added introductory content to canvas page

--- a/src/app/canvas-projects/main-content/main-content.component.html
+++ b/src/app/canvas-projects/main-content/main-content.component.html
@@ -6,9 +6,10 @@
 <br>
 
 <section id="parchment">
-  <h2>What have I made with Canvas ?</h2>
+  <h2 class="mat-h2">My introduction to graphics</h2>
   <p>
-    I have used the Canvas element from tip to tail. I have programmed in its 2d and webgl contexts. I have designed and developed both 2d and 3d interactive arts on the web.
+    I started learning about the canvas element just a few months after I was introduced to JavaScript. The Gif below was my first canvas project that I completed properly. It is a simple rain animation where I made the computer draw multiple lines at random coordinates above the screen and increment their y-coordinate in each frame.
   </p>
+  <img src="assets/gifs/rain.gif" loading="lazy" style="width: 70%; margin-inline: auto; display: block" alt="">
 </section>
 
