added conclusion content to canvas main

--- a/src/app/canvas-projects/main-content/main-content.component.html
+++ b/src/app/canvas-projects/main-content/main-content.component.html
@@ -13,3 +13,6 @@
   <img src="assets/gifs/rain.gif" loading="lazy" style="width: 70%; margin-inline: auto; display: block" alt="">
 </section>
 
+<section id="conclusion">
+  <p>You can also view my other canvas projects by clicking the <mat-icon>menu</mat-icon> above. These projects include chaotic attractors and physics simulations like the double pendulum.</p>
+</section>
