added spin checkbox to 3d model

--- a/src/app/canvas-projects/main-content/main-content.component.html
+++ b/src/app/canvas-projects/main-content/main-content.component.html
@@ -4,15 +4,15 @@
   <span>-Paul Lockhart</span>
 </blockquote>
 <br>
-
-<section id="parchment">
+<section id="quick-intro">
   <h2 class="mat-h2">My introduction to graphics</h2>
   <p>
     I started learning about the canvas element just a few months after I was introduced to JavaScript. The Gif below was my first canvas project that I completed properly. It is a simple rain animation where I made the computer draw multiple lines at random coordinates above the screen and increment their y-coordinate in each frame.
   </p>
   <img src="assets/gifs/rain.gif" loading="lazy" style="width: 70%; margin-inline: auto; display: block" alt="">
-</section>
-
-<section id="conclusion">
-  <p>You can also view my other canvas projects by clicking the <mat-icon>menu</mat-icon> above. These projects include chaotic attractors and physics simulations like the double pendulum.</p>
+  <br/>
+  <p></p>
+  <div class="mini-project-images">
+  </div>
+  <p>You can check out more of my canvas projects by clicking the <mat-icon style="vertical-align: middle;">menu</mat-icon> icon above.</p>
 </section>
