updated font size and moved logo to assets

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,15 +1,7 @@
 <mat-toolbar role="navigation" color="primary" class="mat-elevation-z4">
   <mat-toolbar-row>
     <span routerLink="/landing-page" aria-hidden="false" class="logo" aria-label="Home page link" role="link" style="margin-right: 1em; cursor: pointer;" matTooltip="Home page" matTooltipPosition="after">
-      <svg width="50" height="55" viewBox="0 0 50 40" nofill xmlns="http://www.w3.org/2000/svg">
-        <rect x="3.82877" y="19.2507" width="13.2534" height="0.883562" [style.fill]="'#FFC95F'" nostroke/>
-        <rect x="19.5856" y="31.9555" width="5.89041" height="9.71918" [style.fill]="'#84A9FA'" [style.stroke]="'#FFC95F'" stroke-width="0.3"/>
-        <path [attr.d]="SVGPath" [style.fill]="'black'" nostroke/>
-        <rect x="4.71233" y="34.7534" width="35.3425" height="2.06164" [style.fill]="'#FFC95F'" nostroke/>
-        <rect x="22.6686" y="3.54499" width="4.41781" height="10.0655" transform="rotate(40 22.6686 3.54499)" [style.fill]="'black'" nostroke/>
-        <rect x="15.796" y="11.9883" width="4.12329" height="0.883562" transform="rotate(40 15.796 11.9883)" [style.fill]="'#84A9FA'" [style.stroke]="'#FFC95F'" stroke-width="0.3"/>
-        <rect x="25.557" y="1.68007" width="2.35616" height="3.23973" transform="rotate(40 25.557 1.68007)" [style.fill]="'#84A9FA'" [style.stroke]="'#FFC95F'" stroke-width="0.3"/>
-      </svg>
+      <img src="assets/favicon.svg" alt="logo" />
     </span>
     <div class="links" *ngIf="!isWindowSmall">
       <a
