--- a/src/theme-config.scss
+++ b/src/theme-config.scss
@@ -2,8 +2,6 @@
 
 $font-family: 'Roboto';
 $font-400: 400;
-$sub-2: clamp(12px, 2vw, 16px);
-$body-1: clamp(16px, 1.18vw, 20px);
 
 $font-config: (
   display-4:    mat.define-typography-level(112px, 112px, 300, $font-family, -0.0134em),
@@ -13,9 +11,9 @@ $font-config: (
   headline:     mat.define-typography-level(28px, 30px, $font-400, $font-family, 0.0000em),
   title:        mat.define-typography-level(24px, 25px, 500, $font-family, 0.0075em),
   subheading-2: mat.define-typography-level(16px, 28px, $font-400, $font-family, 0.0094em),
-  subheading-1: mat.define-typography-level(15px, 24px, 500, $font-family, 0.0067em),
+  subheading-1: mat.define-typography-level(14px, 24px, 500, $font-family, 0.0067em),
   body-2:       mat.define-typography-level(14px, 20px, $font-400, $font-family, 0.0179em),
-  body-1:       mat.define-typography-level($body-1, 1.6, $font-400, $font-family, 0.0179em),
+  body-1:       mat.define-typography-level(0.8125rem, 1.6, $font-400, $font-family, 0.0179em),
   button:       mat.define-typography-level(14px, 14px, 500, $font-family, 0.0893em),
   caption:      mat.define-typography-level(12px, 20px, $font-400, $font-family, 0.0333em),
   input:        mat.define-typography-level(inherit, 1.125, $font-400, $font-family, 1.5px)
