--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -30,7 +30,7 @@ div.main {
   overflow: hidden;
   justify-content: space-between;
   align-items: center;
-  section {
+  div {
     &.title {
       display: flex;
       min-width: 45%;
