--- a/src/theme-config.scss
+++ b/src/theme-config.scss
@@ -20,4 +20,13 @@ $font-config: (
 );
 
 // Compute font config
-@include mat.core($font-config);
+// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
+//  The following line adds:
+//    1. Default typography styles for all components
+//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
+//  If you specify typography styles for the components you use elsewhere, you should delete this line.
+//  If you don't need the default component typographies but still want the hierarchy styles,
+//  you can delete this line and instead use:
+//    `@include mat.legacy-typography-hierarchy($font-config);`
+@include mat.all-legacy-component-typographies($font-config);
+@include mat.legacy-core();
